# todo

./: .gitignore  Cargo.toml  README.md  flake.nix  result
demos/: full.md  short.md
src/: main.rs
